Adding send event endpoint.
